@@ -36,10 +36,19 @@
 	  which did not work in the original. Fixed a list corruption bug with the
 	  patrol hammer. Implemented hard-coded ugliness in SS maze for usecode path
 	  eggs in patrol schedule.
-	Rev 7324
+	Rev 7325
 	* gamemgr/modmgr.*: Eliminating warnings.
 	* Makefile.{am,common}, usecode/ucxt/src/*: Making UCXT use the GameManager
 	  class if loading from config file.
+	Rev 7328
+	* usecode/ucxt/data/u7opcodes.data: SETR opcode should also set the return
+	  flag.
+	* usecode/ucxt/src/ucfunc.cc: Adding output of the void, shape# and object#
+	  qualifiers in function declarations. Labels are now unindented, with all
+	  of the code in functions being idented at 1 tab. Fixed bug #1205926 "UCXT:
+	  Functions with no params are decompiled as having one". Fixed bug #1205910
+	  "UCXT: Parameter order reversed in function definitions".
+	* all: Performance: using ++it instead of it++ for iterators.
 
 2013-01-22	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* gumps/Spellbook_gump.*: Keyboard controls for spellbook: page up/down will
